Form validation turned on.

--- a/HospitalHub/myhub/templates/myhub/doctor_detail.html
+++ b/HospitalHub/myhub/templates/myhub/doctor_detail.html
@@ -11,7 +11,7 @@
   box-shadow: 0 4px 8px 0 rgba(181, 224, 61, 0.2);
   max-width: 600px;
   margin: auto;
-  background:black;
+  background: rgb(10, 11, 71);
   
   text-align: center;
   font-family: arial; 
