--- a/HospitalHub/myhub/templates/myhub/hospital_detail.html
+++ b/HospitalHub/myhub/templates/myhub/hospital_detail.html
@@ -14,7 +14,7 @@
   margin: auto;
   text-align: center;
   font-family: 'Rubik', Arial;
-  background :black;
+  background :rgb(10, 11, 71);;
   background-size: cover;
   overflow: hidden;
 }
