--- a/HospitalHub/myhub/static/style.css
+++ b/HospitalHub/myhub/static/style.css
@@ -38,7 +38,7 @@
   font-size: larger;
 }
 .navbar-custom{
-  background-color: darkviolet;
+  background-color: rgb(10, 11, 71);
 }
 
 .background {
