--- a/HospitalHub/myhub/templates/myhub/doctor_detail.html
+++ b/HospitalHub/myhub/templates/myhub/doctor_detail.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 {% extends "base_generic.html" %}
-
+{% load static %}
 {% block content %}
 
 <head>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="{% static 'detailforms.css' %}">
 <style>
 .card {
   box-shadow: 0 4px 8px 0 rgba(181, 224, 61, 0.2);
@@ -76,7 +77,7 @@ a {
 <h3 style="color: white;">Add your review</h3>
 {% if error_message %}<p style="color: white;"><strong>{{ error_message }}</strong></p>{% endif %}
 
-<form action="{% url 'doctor_add_review' doctor.id %}"  method="post" style="color: white;">
+<form action="{% url 'doctor_add_review' doctor.id %}"  method="post" style="color:black">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="Add" style="color: black;"/>
