--- a/HospitalHub/myhub/templates/myhub/doctor_review_detail.html
+++ b/HospitalHub/myhub/templates/myhub/doctor_review_detail.html
@@ -4,14 +4,15 @@
 <body style="background: linear-gradient(to right,white,blue);">
 <table class="table" style="border: none;">
 <tr style="border-bottom: 4px solid grey">
-    <td style=" border: none; font-size:30px;"><a href="{{ doctor_review.doctor.get_absolute_url }}">
-        {{ doctor_review.doctor.first_name }}
+    <td style=" border: none; font-size:30px;"><a href="{{ doctorlink }}">
+        {{ firstname }}
         </a></td>
-    <td style=" border: none; font-size:20px;">{% for star in doctor_review.get_rating %} ⭐ {% endfor %} by <a href="{% url 'user_review_list' doctor_review.user_name %}">{{ doctor_review.user_name }}</a></td>
-    <td style=" border: none; font-size:20px;">{{ doctor_review.comment }}</td>
+    <td style=" border: none; font-size:20px;">{% for star in stars %} ⭐ {% endfor %} by <a href="{% url 'user_review_list' username %}">{{ username }}</a></td>
+    <td style=" border: none; font-size:20px;">{{ comment }}</td>
 
 </tr>
 </table>
 </body>
 {% endblock %}
 
+<!--{{ doctor_review.doctor.get_absolute_url }}-->
