style.css madhye changes.

--- a/HospitalHub/myhub/static/style.css
+++ b/HospitalHub/myhub/static/style.css
@@ -44,6 +44,7 @@
 .background {
     background-color: #cccccc;
     font-family: 'Montserrat', sans-serif;
+    
 }
 
 .searchfield {
@@ -52,7 +53,9 @@
 
 .main_container{
 font-family: 'Rubik', sans-serif;
-   
+
+    
 }
+.
 
 
