--- a/HospitalHub/myhub/templates/partials/_header.html
+++ b/HospitalHub/myhub/templates/partials/_header.html
@@ -41,7 +41,8 @@
                 <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
                 {% else %}
                 <li ><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>    
-                {% endif %}  
+                {% endif %}
+                <li><a href="{% url 'register' %}?next={{request.path}}">New? Register now!</a></li>
               </ul>
             </div>
             <!-- /.navbar-collapse -->
