--- a/HospitalHub/myhub/templates/enlistuni.html
+++ b/HospitalHub/myhub/templates/enlistuni.html
@@ -21,7 +21,7 @@
                         <p style="color: white;">{{fields.label_tag}}</p>
                         <p>{{fields}}</p>
                         {%endfor%}
-                        <button style="background-color:#F4EB16; color:blue" class="btn btn-outline-info" type="submit">Sign Up</button>
+                        <button class="btn btn-outline-info" type="submit">Sign Up</button>
 
                    
                 
