--- a/HospitalHub/myhub/templates/myhub/hospital_detail.html
+++ b/HospitalHub/myhub/templates/myhub/hospital_detail.html
@@ -5,132 +5,94 @@
 
 {% block content %}
 
-<head>
-  
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="{% static 'detailforms.css' %}">
-<style>
-
-.card {
-  box-shadow: 0 4px 8px 0 rgba(181, 224, 61, 0.2);
-  max-width: 600px;
-  margin: auto;
-  text-align: center;
-  font-family: 'Rubik', Arial;
-  background :rgb(10, 11, 71);;
-  background-size: cover;
-  overflow: hidden;
-}
-	
- 
-.title {
-  color: grey;
-  font-size: 18px;
-}
-
-button {
-  border: none;
-  outline: 0; 
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-  font-size: 18px;
-}
-
-a {
-  text-decoration: white;
-  font-size: 22px;
-  color: white;
-}
-
-button:hover, a:hover {
-  opacity: 0.7;
-}
-</style>
-<meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-
-</head>
-<body  style="background: linear-gradient(to right,white,blue);">
-<div class="card">
-  <div class="card-header heading-footer">
 
 
-  <h1 style="color: white;">Name: {{ hospital.name }}</h1>
-  
- <!-- <p><strong>Author:</strong> <a href="">{{ book.author }}</a></p>--> <!-- author detail link not yet defined -->
-  <p style="color: white;"> <strong>About:</strong> {{ hospital.desc }}</p>
-  <p style="color: white;"> <strong>Address:</strong> {{ hospital.building }}, {{ hospital.street }}, {{ hospital.city }}, {{ hospital.pincode }}</p>
-<!--
-  <h3 style="color: white;"> ambulance details</h>
-{% for amb in hospital.ambulance_set.all %}
-  
-  <h5 style="color: white;">{{ amb.key2}})ambulance type: {{ amb.ambvehicletype}}</h5>
-  <h5 style="color: white;"> capcity:{{ amb.vehiclecapacity}}</h5>
-  {% endfor %}
-
-
-<h3 style="color: white;"> Hospital contact details</h>
-{% for phone in hospital.hospphoneno_set.all %}
-       <h5 style="color: white;"> {{phone.phonenumber}}</h5>
-      {% endfor %}-->
-
-<!-- <div style="margin-left:20px;margin-top:20px">
-    <h4>Copies</h4>
-
-    {% for copy in book.bookinstance_set.all %}
-      <hr>
-      <p class="{% if copy.status == 'a' %}text-success{% elif copy.status == 'm' %}text-danger{% else %}text-warning{% endif %}">
-        {{ copy.get_status_display }}
-      </p>
-      {% if copy.status != 'a' %}
-        <p><strong>Due to be returned:</strong> {{ copy.due_back }}</p>
-      {% endif %}
-      <p><strong>Imprint:</strong> {{ copy.imprint }}</p>
-      <p class="text-muted"><strong>Id:</strong> {{ copy.id }}</p>
-    {% endfor %}
-  </div>-->
- 
-  <h3 style="color: white;">Add your review</h3>
-  {% if error_message %}<p style="color: white;"><strong>{{ error_message }}</strong></p>{% endif %}
-  
-  <form action="{% url 'hospital_add_review' hospital.id %}"  method="post" style="color: black;">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <input type="submit" value="Add"  style="color:black"/>
-  </form>
-  {% if hospital.hospital_review_set.all %}
-
-  <p style="color: white;">{% if hospital.intaverage_rating %} {% for star in hospital.intaverage_rating %} ⭐ {% endfor %} ({{hospital.hospital_review_set.all.count}} reviews){% endif %}</p>
- 
-  
-
-  
-  <br>
-  <br>
-  <div > 
-    {% for review in hospital.hospital_review_set.all %}
-    <div>
-        <h6 style="color: white;">{{ review.user_name }}</h6>
-        <h6>{% for star in review.get_rating %} ⭐ {% endfor %}</h6>
-        <h6 style="color: white;">{{ review.comment }}</em>
-        <h5 style="color: white;"><a href="{{ review.get_absolute_url }}">
-        Read more
-        </a></h5>
+<!--inner banner-->
+<div class="inner-banner">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-7">
+        <h1>Hospital Details</h1>
+      </div>
+      <div class="col-md-5">
+        <ol class="breadcrumb">
+          <li><a href="{% url 'index' %}">Home</a></li>
+          <li class="active">Hospital Details</li>
+        </ol>
+      </div>
     </div>
-    {% endfor %}
+  </div>
 </div>
-{% else %}
-<p style="color: white;">No reviews for this hospital yet</p>
-{% endif %}
+<!--inner banner End-->
+
+<!--Main Content Start-->
+<div class="main-content">
+  <div class="team-details">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-sm-6">
+          <div class="team-detail-img"> <img src="{{hospital.profile.url}}" alt=""> </div>
+        </div>
+        <div class="col-md-6 col-sm-6">
+          <div class="team-details-text">
+            <div class="sectio-title-2"> <strong>{{ hospital.city }}</strong>
+              <h2>{{ hospital.name }}</h2>
+              <h4>{% if doctor.doctor_review_set.all %}{% if doctor.intaverage_rating %} {% for star in doctor.intaverage_rating %} ⭐ {% endfor %} ({{doctor.doctor_review_set.all.count}} reviews) {% endif %}{% endif %}</h2>
+            </div>
+            <p>{{ hospital.desc }}</p>
+            <div> <strong>{{ hospital.building }}, {{ hospital.street }}, {{ hospital.city }}, {{ hospital.pincode }}</strong>
+          </div>
+        </div>
+      </div>
+      <!--
+      <div class="row">
+        <div class="col-md-12">
+          <div class="team-exp">
+            <div class="sectio-title-2"> <strong>{{ object.speciality }}</strong>
+              <h2>Experiences</h2>
+            </div>
+            {{ object.experience}}
+          </div>
+        </div>
+      </div>-->
+
+    <!--Testimonials Start-->
+    <div class="col-md-12">
+      <div class="home-testimonials">
+        <div class="sectio-title-2"> <h3>Reviews</h3>
+        </div>
+        <div class="item">
+          <div class="testimonial-holder">
+            {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
+            <div class="sectio-title-2"> <strong>Review your experience!</strong></div>
+
+            <form action="{% url 'hospital_add_review' hospital.id %}"  method="post">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input class="book-app" type="submit" value="Add"/>
+            </form>
+          </div>
+        </div>
+              <!--Slider Start-->
+          {% for review in hospital.hospital_review_set.all %}
+          <div class="item">
+            <div class="testimonial-holder">
+              <div class="user-thumb"> <img src="" alt=""> <strong>{{ review.user_name }}</strong>
+                <i>{% for star in review.get_rating %} ⭐ {% endfor %}</i><br><i>{{ review.get_date }}</i> </div>
+              <div class="test-text">
+                <p>{{ review.comment }}</p>
+              </div>
+            </div>
+          </div>
+          {% endfor %}
+
+          <!--Slider End-->
+
+      </div>
+    </div>
+    <!--Testimonials End-->
+    </div>
+  </div>
+</div>
+<!--Main Content End-->
 {% endblock %}
-</div>
-</body>
-</html>
