--- a/HospitalHub/templates/registration/login.html
+++ b/HospitalHub/templates/registration/login.html
@@ -44,7 +44,7 @@
   <div class="team-details">
   <div class="container">
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-sm-6 " >
             <div class="card">
                 <form class="box" method="post" action="{% url 'login' %}">
                     {% csrf_token %}
