--- a/HospitalHub/myhub/static/forms.css
+++ b/HospitalHub/myhub/static/forms.css
@@ -1,11 +1,14 @@
       .box {
       width: 500px;
       padding: 40px;
-      border: 2px solid #bf0311;
+      border: 2px solid #bf0310;
       background: white;
       text-align: center;
       transition: 0.25s;
-      justify-content:center;align-items:center;width:500px;
+      justify-content:center;
+      align-items:center;
+      width:500px;
+      
     }
   
     .box input[type="text"], .box input[type="password"] {
@@ -20,7 +23,7 @@
       outline: none;
       color:#bf0311;
       border-radius: 24px;
-      transition: 0.25s
+      transition: 0.25s;
   }
   
   .box h1 {
